[package]
name = "gaymwtf-bin"
version = "0.1.0"
edition = "2021"

[dependencies]
gaymwtf-core = "0.1.0"
macroquad = "0.4"
anyhow = "1.0"
noise = "0.9"
rand = "0.9"
once_cell = "1.19"
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29"
num_cpus = "1"